--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_player" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_library"
         android:icon="@drawable/library_music"
         android:title="@string/title_gallery" />
 
