--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="twenty_percent_black_overlay">#34000000</color>
+    <color name="eighty_percent_black_overlay">#80000000</color>
+    <color name="app_shortcut_default_foreground">#607d8b</color>
+    <color name="app_shortcut_default_background">#f5f5f5</color>
 
+    <!--"control" means checkbox / radio button-->
 
+    <!--LIGHT-->
+    <!--12%-->
+    <color name="ate_switch_track_disabled_light">#1F000000</color>
+    <color name="ate_button_disabled_light">#1F000000</color>
+    <!-- 26% -->
+    <color name="ate_control_disabled_light">#43000000</color>
+    <color name="ate_switch_track_normal_light">#43000000</color>
+    <color name="ate_button_text_disabled_light">#43000000</color>
+    <!-- 38% -->
+    <color name="ate_text_disabled_light">#61000000</color>
+    <!-- 54% -->
+    <color name="ate_secondary_text_light">#8A000000</color>
+    <color name="ate_icon_light">#8A000000</color>
+    <color name="ate_control_normal_light">#8A000000</color>
+    <!-- 87% -->
+    <color name="ate_primary_text_light">#DE000000</color>
+    <!--Grey 50, #FAFAFA, Opacity  100%-->
+    <color name="ate_switch_thumb_normal_light">#FFFAFAFA</color>
+    <!--Grey 400, #BDBDBD, Opacity  100%-->
+    <color name="ate_switch_thumb_disabled_light">#FFBDBDBD</color>
+    <!---->
+    <color name="ate_navigation_drawer_selected_light">#E8E8E8</color>
+
+    <!--DARK-->
+    <!--10%-->
+    <color name="ate_switch_track_disabled_dark">#1AFFFFFF</color>
+    <!--12%-->
+    <color name="ate_button_disabled_dark">#1F000000</color>
+    <!-- 30% -->
+    <color name="ate_control_disabled_dark">#4DFFFFFF</color>
+    <color name="ate_switch_track_normal_dark">#4DFFFFFF</color>
+    <color name="ate_button_text_disabled_dark">#4DFFFFFF</color>
+    <color name="ate_text_disabled_dark">#4DFFFFFF</color>
+    <!-- 70% -->
+    <color name="ate_secondary_text_dark">#B3FFFFFF</color>
+    <color name="ate_icon_dark">#B3FFFFFF</color>
+    <color name="ate_control_normal_dark">#B3FFFFFF</color>
+    <!-- 100% -->
+    <color name="ate_primary_text_dark">#FFFFFFFF</color>
+    <!--Grey 400, #BDBDBD, Opacity  100%-->
+    <color name="ate_switch_thumb_normal_dark">#FFBDBDBD</color>
+    <!--Grey 800, #424242, Opacity 100%-->
+    <color name="ate_switch_thumb_disabled_dark">#FF424242</color>
+    <!---->
+    <color name="ate_navigation_drawer_selected_dark">#202020</color>
+    <color name="black_p50">#7f000000</color>
+
+    <!-- Google's Material Design colors from
+  https://www.google.com/design/spec/style/color.html#color-color-palette -->
+
+    <!-- Items Light -->
+    <color name="md_light_background">@color/md_grey_50</color>
+    <!-- 12% -->
+    <color name="md_light_dividers">#1F000000</color>
+    <!-- 38% -->
+    <color name="md_light_disabled">#61000000</color>
+    <!-- 54% -->
+    <color name="md_light_secondary">#8A000000</color>
+    <color name="md_light_primary_icon">#8A000000</color>
+    <!-- 87% -->
+    <color name="md_light_primary_text">#DE000000</color>
+    <!-- other specifications -->
+    <color name="md_light_statusbar">@color/md_grey_300</color>
+    <color name="md_light_appbar">@color/md_grey_100</color>
+    <color name="md_light_cards">@color/md_white_1000</color>
+    <color name="md_light_dialogs">@color/md_white_1000</color>
+
+    <!-- Items Dark -->
+    <color name="md_dark_background">@color/md_grey_850</color>
+    <!-- 12% -->
+    <color name="md_dark_dividers">#1FFFFFFF</color>
+    <!-- 30% -->
+    <color name="md_dark_disabled">#4DFFFFFF</color>
+    <!-- 70% -->
+    <color name="md_dark_secondary">#B3FFFFFF</color>
+    <color name="md_dark_primary_icon">#B3FFFFFF</color>
+    <!-- 100% -->
+    <color name="md_dark_primary_text">#FFFFFFFF</color>
+    <!-- other specifications -->
+    <color name="md_dark_statusbar">@color/md_black_1000</color>
+    <color name="md_dark_appbar">@color/md_grey_900</color>
+    <color name="md_dark_cards">@color/md_grey_800</color>
+    <color name="md_dark_dialogs">@color/md_grey_800</color>
 
     <!-- Red -->
     <color name="md_red_50">#FFEBEE</color>
