--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/md_amber_900</item>
-        <item name="colorPrimaryDark">@color/md_amber_900</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#FD6A83</item>
+        <item name="colorPrimaryDark">#FD6A83</item>
+        <item name="colorAccent">@color/md_black_1000</item>
     </style>
 
 </resources>
