--- a/app/src/main/res/layout/card_retro_info.xml
+++ b/app/src/main/res/layout/card_retro_info.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -49,7 +49,9 @@
                     android:layout_height="wrap_content"
                     android:text="@string/app_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="?android:attr/textColorPrimary" />
+                    android:textColor="@color/md_white_1000"
+                    android:textStyle="bold"
+                    app:fontFamily="@font/convergence" />
 
                 <android.support.v7.widget.AppCompatTextView
                     android:layout_width="match_parent"
@@ -57,7 +59,8 @@
                     android:alpha="0.85"
                     android:text="@string/app_summary"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:textColor="?android:attr/textColorSecondary" />
+                    android:textColor="@color/md_grey_100"
+                    app:fontFamily="@font/convergence" />
             </LinearLayout>
 
 
