--- a/app/src/main/res/layout/library_view.xml
+++ b/app/src/main/res/layout/library_view.xml
@@ -40,6 +40,6 @@
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:elevation="8dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/santhosh" />
 
 </RelativeLayout>
