--- a/app/src/main/res/layout/library_view.xml
+++ b/app/src/main/res/layout/library_view.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Santhosh"
+                android:text="Santhosh Narayanan"
                 android:textAlignment="center"
                 android:textColor="@color/md_white_1000"
                 android:textSize="18sp" />
