view pagers added

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="in.beyonitysoftwares.besttamilsongs.AboutFragment">
+    tools:context="in.beyonitysoftwares.besttamilsongs.fragments.AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -14,7 +14,7 @@
 
     <include
         layout="@layout/song_request"
-        layout_weight="1"
+        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
