--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="in.beyonitysoftwares.besttamilsongs.MainActivity">
+    tools:context="in.beyonitysoftwares.besttamilsongs.Activities.MainActivity">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
@@ -22,6 +22,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:id="@+id/bottomlayout"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -34,6 +35,16 @@
             android:layout_gravity="center"
              />
     </LinearLayout>
+    <in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager
+        android:layout_width="match_parent"
+        android:layout_below="@+id/navigation"
+        android:layout_above="@+id/bottomlayout"
+        android:layout_height="match_parent"
+        android:id="@+id/mainVG">
+
+    </in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager>
+
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
