--- a/app/src/main/res/layout/activity_lyrics_eng.xml
+++ b/app/src/main/res/layout/activity_lyrics_eng.xml
@@ -18,7 +18,8 @@
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"
+            />
 
     </android.support.v7.widget.CardView>
 
