--- a/app/src/main/res/layout/card_retro_info.xml
+++ b/app/src/main/res/layout/card_retro_info.xml
@@ -50,6 +50,7 @@
                     android:text="@string/app_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@color/md_white_1000"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:fontFamily="@font/convergence" />
 
@@ -60,6 +61,7 @@
                     android:text="@string/app_summary"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/md_grey_100"
+                    android:textStyle="italic"
                     app:fontFamily="@font/convergence" />
             </LinearLayout>
 
@@ -75,32 +77,38 @@
             android:paddingEnd="16dp"
             android:paddingStart="16dp">
 
-            <android.support.v7.widget.AppCompatImageButton
+            <Button
                 android:id="@+id/app_telegram_channel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:padding="16dp"
-                app:srcCompat="@drawable/ic_telegram_white" />
+                android:drawableTop="@drawable/ic_telegram_white"
+                android:text="@string/contact"
+                android:textAllCaps="false"
+                android:textColor="@color/md_white_1000" />
 
-            <android.support.v7.widget.AppCompatImageButton
+            <Button
                 android:id="@+id/app_rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:padding="16dp"
-                app:srcCompat="@drawable/ic_star_white_24dp" />
+                android:drawableTop="@drawable/ic_star_white_24dp"
+                android:text="@string/rate"
+                android:textAllCaps="false"
+                android:textColor="@color/md_white_1000" />
 
-            <android.support.v7.widget.AppCompatImageButton
+            <Button
                 android:id="@+id/app_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:padding="16dp"
-                app:srcCompat="@drawable/ic_share_white_24dp" />
+                android:drawableTop="@drawable/ic_share_white_24dp"
+                android:text="@string/shareapp"
+                android:textAllCaps="false"
+                android:textColor="@color/md_white_1000" />
 
         </LinearLayout>
     </LinearLayout>
