--- a/app/src/main/res/layout/song_request.xml
+++ b/app/src/main/res/layout/song_request.xml
@@ -35,6 +35,7 @@
             android:ems="10"
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences"
+            android:padding="3dp"
             android:textColor="@color/md_blue_600" />
 
         <TextView
@@ -56,6 +57,7 @@
             android:ems="10"
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences|textMultiLine"
+            android:padding="3dp"
             android:textColor="@color/md_blue_600" />
 
         <Button
