--- a/app/src/main/res/layout/fragment_all_songs.xml
+++ b/app/src/main/res/layout/fragment_all_songs.xml
@@ -5,6 +5,10 @@
     tools:context="in.beyonitysoftwares.besttamilsongs.fragments.AllSongsFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/allSongsrv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </FrameLayout>
