--- a/app/src/main/res/layout/song_view.xml
+++ b/app/src/main/res/layout/song_view.xml
@@ -7,7 +7,7 @@
     android:padding="5dp">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/albumView"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/gradient"
@@ -23,13 +23,13 @@
         android:paddingStart="10dp">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/songTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/albumTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
