--- a/app/src/main/res/layout/song_request.xml
+++ b/app/src/main/res/layout/song_request.xml
@@ -16,6 +16,19 @@
         android:padding="5dp">
 
         <TextView
+            android:id="@+id/textView17"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/convergence"
+            android:text="@string/song_req"
+            android:textAlignment="center"
+            android:textColor="@color/md_white_1000"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:typeface="serif" />
+
+        <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,28 +48,6 @@
             android:ems="10"
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences"
-            android:padding="3dp"
-            android:textColor="@color/md_blue_600" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/song_title"
-            android:textColor="@color/md_white_1000"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@color/md_white_1000"
-            android:ems="10"
-            android:fontFamily="@font/convergence"
-            android:inputType="textCapSentences|textMultiLine"
             android:padding="3dp"
             android:textColor="@color/md_blue_600" />
 
