--- a/app/src/main/res/layout/song_request.xml
+++ b/app/src/main/res/layout/song_request.xml
@@ -51,6 +51,29 @@
             android:padding="3dp"
             android:textColor="@color/md_blue_600" />
 
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/convergence"
+            android:text="@string/song_req"
+            android:textColor="@color/md_white_1000"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/md_white_1000"
+            android:ems="10"
+            android:fontFamily="@font/convergence"
+            android:inputType="textCapSentences"
+            android:padding="3dp"
+            android:textColor="@color/md_blue_600"/>
+
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
