--- a/app/src/main/res/layout/fragment_all_songs.xml
+++ b/app/src/main/res/layout/fragment_all_songs.xml
@@ -1,20 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="in.beyonitysoftwares.besttamilsongs.fragments.AllSongsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/allSongsrv"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        style="@android:style/Widget.Holo.ProgressBar"
-        android:layout_gravity="bottom|center"/>
 
-</FrameLayout>
+
+
+</RelativeLayout>
