--- a/app/src/main/res/layout/card_retro_info.xml
+++ b/app/src/main/res/layout/card_retro_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/gradient"
     android:padding="5dp"
-    app:cardBackgroundColor="@color/md_pink_700"
+    app:cardBackgroundColor="@color/md_light_green_A700"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     app:cardUseCompatPadding="true">
@@ -32,7 +32,7 @@
                 android:layout_height="52dp"
                 android:layout_margin="8dp"
 
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_launcher_foreground" />
 
             <LinearLayout
                 android:layout_width="match_parent"
