--- a/app/src/main/res/layout/song_request.xml
+++ b/app/src/main/res/layout/song_request.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
-    app:cardBackgroundColor="@color/md_pink_700"
+    app:cardBackgroundColor="@color/md_light_green_A700"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
     app:cardUseCompatPadding="true">
@@ -51,7 +51,7 @@
             android:padding="3dp"
             android:textColor="@color/md_blue_600" />
 
-        <TextView
+        <!--   <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences"
             android:padding="3dp"
-            android:textColor="@color/md_blue_600"/>
+            android:textColor="@color/md_blue_600"/>-->
 
         <Button
             android:id="@+id/button"
