--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -265,7 +265,7 @@
     <color name="md_light_green_A100">#CCFF90</color>
     <color name="md_light_green_A200">#B2FF59</color>
     <color name="md_light_green_A400">#76FF03</color>
-    <color name="md_light_green_A700">#64DD17</color>
+    <color name="md_light_green_A700">#0576b4</color>
 
     <!-- Lime -->
     <color name="md_lime_50">#F9FBE7</color>
