--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,41 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:scaleType="center"
-        app:backgroundTint="@color/md_grey_500"
+        app:backgroundTint="@color/pocket_color_2"
         app:fabSize="normal"
-        app:srcCompat="@drawable/play_circle_outline" />
+        app:srcCompat="@drawable/play" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="58dp"
+        android:layout_marginRight="58dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        app:backgroundTint="@color/pocket_color_1"
+        app:srcCompat="@drawable/skipforward" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:clickable="true"
+        app:backgroundTint="@color/pocket_color_1"
+        app:srcCompat="@drawable/skipbackward" />
 
     <LinearLayout
         android:id="@+id/bottomlayout"
@@ -48,6 +77,7 @@
             android:indeterminate="true"
             app:spb_speed="2"
             app:spb_stroke_width="2dp" />
+
     </LinearLayout>
     <in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager
         android:layout_width="match_parent"
