--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="in.beyonitysoftwares.besttamilsongs.fragments.LibraryFragment">
 
+
     <!-- TODO: Update blank fragment layout -->
     <in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager
         android:layout_width="match_parent"
@@ -32,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
-    </LinearLayout>-->
+    </LinearLayout>
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,5 +41,5 @@
         app:tabBackground="@drawable/tab_selector"
         android:layout_alignParentBottom="true"
         app:tabGravity="center"
-        app:tabIndicatorHeight="0dp"/>
+        app:tabIndicatorHeight="0dp"/>-->
 </RelativeLayout>
