--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -2,11 +2,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="@style/Widget.AppCompat.Button.Borderless.Colored"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:fontFamily="@font/convergence"
+    android:singleLine="true"
     android:textColor="@color/md_teal_900"
     android:textSize="10sp"
-    android:textStyle="bold"
-    android:singleLine="true" />
+    android:textStyle="bold" />
